--- a/functional_test/test-output/old/Automation/classes.html
+++ b/functional_test/test-output/old/Automation/classes.html
@@ -71,15 +71,23 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>savingsBalanceBreakdown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>meToMeTransferfromSavingsSummaryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>savingsBalanceBreakdown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyHomepageAllAccounts</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBeneficiaryPersonal</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addBeneficiaryBusiness</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -91,19 +99,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>addBeneficiaryCorporate</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>animation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>meToMeTransferfromChequingsSummaryPage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>addBeneficiaryRetail</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -123,11 +123,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>reviewMeToYoutransfer</td>
+<td>meToMeTransferfromSavingsListPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>meToMeTransferfromSavingsListPage</td>
+<td>reviewMeToYoutransfer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
