--- a/functional_test/test-output/old/Automation/methods-not-run.html
+++ b/functional_test/test-output/old/Automation/methods-not-run.html
@@ -1,5 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.testscripts.TestCases.addBeneficiaryRetail</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageNoAccounts</td></tr>
 <tr><td>com.testscripts.TestCases.logOutButton</td></tr>
 <tr><td>com.testscripts.TestCases.meToYouTransfer</td></tr>
@@ -12,10 +11,10 @@
 <tr><td>com.testscripts.TestCases.loginWithValidTestdata</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsListPage</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageAllAccounts</td></tr>
-<tr><td>com.testscripts.TestCases.savingsBalanceBreakdown</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsSummaryPage</td></tr>
+<tr><td>com.testscripts.TestCases.savingsBalanceBreakdown</td></tr>
 <tr><td>com.testscripts.TestCases.passwordRetry</td></tr>
-<tr><td>com.testscripts.TestCases.addBeneficiaryCorporate</td></tr>
+<tr><td>com.testscripts.TestCases.errorHandlingMetoMeRestriction</td></tr>
 <tr><td>com.testscripts.TestCases.animation</td></tr>
 <tr><td>com.testscripts.TestCases.withLoanBalanceDetails</td></tr>
 <tr><td>com.testscripts.TestCases.errorHandlingMetoMeOopsMessage</td></tr>
