--- a/functional_test/test-output/old/Automation/methods-alphabetical.html
+++ b/functional_test/test-output/old/Automation/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d37475">  <td>18/02/01 17:16:37</td>   <td>0</td> <td title="&lt;&lt;TestCases.closeApp()[pri:0, instance:com.testscripts.TestCases@10a035a0]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>18/02/01 17:14:46</td>   <td>-110220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.errorHandlingMetoMeRestriction()[pri:0, instance:com.testscripts.TestCases@10a035a0]">errorHandlingMetoMeRestriction</td> 
+<tr bgcolor="d37475">  <td>18/02/02 15:51:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.addBeneficiaryBusiness()[pri:0, instance:com.testscripts.TestCases@10a035a0]">addBeneficiaryBusiness</td> 
   <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>18/02/01 17:14:36</td>   <td>-120727</td> <td title="&gt;&gt;TestCases.openApp()[pri:0, instance:com.testscripts.TestCases@10a035a0]">&gt;&gt;openApp</td> 
+<tr bgcolor="d37475">  <td>18/02/02 15:47:31</td>   <td>-258430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.addBeneficiaryPersonal()[pri:0, instance:com.testscripts.TestCases@10a035a0]">addBeneficiaryPersonal</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="d37475">  <td>18/02/02 15:53:46</td>   <td>116344</td> <td title="&lt;&lt;TestCases.closeApp()[pri:0, instance:com.testscripts.TestCases@10a035a0]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="d37475">  <td>18/02/02 15:47:20</td>   <td>-269234</td> <td title="&gt;&gt;TestCases.openApp()[pri:0, instance:com.testscripts.TestCases@10a035a0]">&gt;&gt;openApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
 </table>
